--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,20 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
   <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
   <link rel="stylesheet" href="styles/index.css">
+  <link rel="manifest" href="/manifest.json">
+  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCMFWXqwYTatgJw6SGYaz4VmOxLTMi-It8",
+      authDomain: "saltycustoms-b6c1a.firebaseapp.com",
+      databaseURL: "https://saltycustoms-b6c1a.firebaseio.com",
+      projectId: "saltycustoms-b6c1a",
+      storageBucket: "saltycustoms-b6c1a.appspot.com",
+      messagingSenderId: "346265593860"
+    };
+    firebase.initializeApp(config);
+  </script>
 </head>
 
 <body>
